--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="img">
                     <img src="./img/Clothing.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://clothing-e86loogty.now.sh">Clothing store</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/clothing/">Clothing store</a></p>
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                 <div class="img">
                     <img src="./img/SKATERS.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://bootstrap-theme2skate-qexfkr6f9.now.sh">skateboard-inspired site</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://bootstrap-theme2skate-qexfkr6f9.now.sh">skateboard-inspired site</a></p>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <div class="img">
                     <img src="./img/Website-profesional.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://website-profesional-57ah633nw.now.sh">Website template</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://website-profesional-57ah633nw.now.sh">Website template</a></p>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                 <div class="img">
                     <img src="./img/Pizzeria-Anabel.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://pizzeria-anabel-8bqmd8kts.now.sh">inspired by pizzeria</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/pizzeria-anabel/">inspired by pizzeria</a></p>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                 <div class="img">
                     <img src="./img/copia1.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://copia1-3h5957j4a.now.sh">copy of an internet template</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia1/">copy of an internet template</a></p>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <div class="img">
                     <img src="./img/e-commerce.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://e-commerce-7c1dpep7i.now.sh">Web-inspired for online stores</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/e-commerce/">Web-inspired for online stores</a></p>
                     </div>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                 <div class="img">
                     <img src="./img/Copia-pagina.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://copia3-stripe-cptphlzuu.now.sh">Inspired by stripe</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia3-stripe/">Inspired by stripe</a></p>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                 <div class="img">
                     <img src="./img/PetWeb.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://webpet-k56doy3py.now.sh">For lovers of their moscotas</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/webpet/">For lovers of their moscotas</a></p>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                 <div class="img">
                     <img src="./img/Tienda-online(2).png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://tienda-de-ropa-ra0x1kyqb.now.sh">Web of online stores</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/tienda-con-bootstrap/">Web of online stores</a></p>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 <div class="img">
                     <img src="./img/plantas.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://plantas-ayy7d798u.now.sh">Web dedicated to plants</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/plantas/">Web dedicated to plants</a></p>
                     </div>
                 </div>
             </div>
@@ -132,16 +132,16 @@
                 <div class="img">
                     <img src="./img/Dentista.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://dentista-llvnz3i1g.now.sh">Dentist website</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/dentista/">Dentist website</a></p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
                 <div class="img">
-                    <img src="./img/Taller-mecánico(1).png" style="width: 100%" alt="">
+                    <img src="./img/Taller-mecánico.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://tallermecanico-88wpuclyy.now.sh">Mechanical workshop</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/tallermecanico/">Mechanical workshop</a></p>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                 <div class="img">
                     <img src="./img/Hamburguesas.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://humburguesas-74sovss7r.now.sh">Burger shop</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/humburguesas/">Burger shop</a></p>
                     </div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                 <div class="img">
                     <img src="./img/WEB-CACTUS.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://webcactus-832az8xz4.now.sh/">Cactus store</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/webcactus/">Cactus store</a></p>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                 <div class="img">
                     <img src="./img/Precios-simples.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://simple-pricing-m97e9m6fz.now.sh">Price template</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia2/">Price template</a></p>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                 <div class="img">
                     <img src="./img/COFFEE(1).jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://coffee-gn35z9zvb.now.sh">Coffee shop</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/coffee/">Coffee shop</a></p>
                     </div>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                 <div class="img">
                     <img src="./img/Cambia-color.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://colores-c0fhhho13.now.sh">demonstration of how you can give functionalities to the elements. in this case changing the colors.</a></p>
+                        <p><a class="text-center text-light h6 ml-3" target="_blank" href="https://colores-c0fhhho13.now.sh">demonstration of how you can give functionalities to the elements. in this case changing the colors.</a></p>
                     </div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                 <div class="img">
                     <img src="./img/Comidas-Argentinas.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://comidas-argentinas-ncj8ry6mb.now.sh/">Web of typical foods and related events</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/comidas-argentinas/">Web of typical foods and related events</a></p>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 <div class="img">
                     <img src="./img/Fletes-Damián.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://fletes-damian-jly9ewno0.now.sh">Freight company</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/fletes-damian/">Freight company</a></p>
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
                 <div class="img">
                     <img src="./img/Guía-Hoteles.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://guia-de-hoteles-aduy1llb1.now.sh/">Hotel guide</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/guia-de-hoteles/">Hotel guide</a></p>
                     </div>
                 </div>
             </div>
@@ -221,7 +221,7 @@
                 <div class="img">
                     <img src="./img/Instrumentos-Musicales.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://instrumentos-musicales-d6m4th0lp.now.sh">Musical instruments shop</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/instrumentos-musicales/">Musical instruments shop</a></p>
                     </div>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                 <div class="img">
                     <img src="./img/Peluquería-Canina.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://peluqueria-canina-5no936ile.now.sh/">Dog groomer</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/peluqueria-canina/">Dog groomer</a></p>
                     </div>
                 </div>
             </div>
@@ -239,16 +239,16 @@
                 <div class="img">
                     <img src="./img/Web-Site1.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://web-site-1-k51gv42y1.now.sh">Website template</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/Web-site-1/">Website template</a></p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
                 <div class="img">
-                    <img src="./img/Weather-app.png" style="width: 100%" alt="">
+                    <img src="./img/Weather-app.png" style="width: 150%; left:-25%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h1 ml-3" target="_blank" href="https://weather-f4r9qt8s8.now.sh">Simple weather application</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://weather-f4r9qt8s8.now.sh">Simple weather application</a></p>
                     </div>
                 </div>
             </div>
