--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="./img/logo.png" style="width:100%" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Login<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
@@ -34,30 +35,34 @@
             </li>
           </ul>
         </div>
+        </div>
     </nav>
 
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Clothing.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/clothing/">Clothing store</a></p>
+                        <p>Using the pseudo-class :hover to display information about the product</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/SKATERS.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://bootstrap-theme2skate-qexfkr6f9.now.sh">skateboard-inspired site</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://bootstrap-theme2skate-qexfkr6f9.now.sh">Skateboard-inspired site</a></p>
+                        <p>Use of animations for the blocks to slide when the page is refreshed</p>
+
                     </div>
                 </div>
             </div>
             
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Website-profesional.png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://website-profesional-57ah633nw.now.sh">Website template</a></p>
@@ -66,34 +71,36 @@
             </div>
             
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Pizzeria-Anabel.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/pizzeria-anabel/">inspired by pizzeria</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/pizzeria-anabel/">Inspired by pizzeria</a></p>
+                        <p>With fixed funds</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/copia1.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia1/">copy of an internet template</a></p>
+                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia1/">Copy of an internet template</a></p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/e-commerce.png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/e-commerce/">Web-inspired for online stores</a></p>
+                        <p>An example guide to commercial stores with a 6-page pagination</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Copia-pagina.png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia3-stripe/">Inspired by stripe</a></p>
@@ -102,25 +109,27 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/PetWeb.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/webpet/">For lovers of their moscotas</a></p>
+                        <p>With slider and a fixed bottom at the end of the page</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Tienda-online(2).png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/tienda-con-bootstrap/">Web of online stores</a></p>
+                        <p>this page is 100% with Bootstrap4 without css</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/plantas.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/plantas/">Web dedicated to plants</a></p>
@@ -129,7 +138,7 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Dentista.png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/dentista/">Dentist website</a></p>
@@ -137,25 +146,27 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-4">
-                <div class="img">
+            <div class="col-md-6 col-lg-4 ">
+                <div class="img float-left">
                     <img src="./img/Taller-mecánico.png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/tallermecanico/">Mechanical workshop</a></p>
+                        <p>Here we have animations throughout the page even in the slider</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4">
-                <div class="img">
-                    <img src="./img/Hamburguesas.jpg" style="width: 100%" alt="">
+                <div class="img float-left">
+                    <img src="./img/Hamburguesas.png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/humburguesas/">Burger shop</a></p>
+                        <p>Here we have a modal with a slider that shows four images with product promotions</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/WEB-CACTUS.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/webcactus/">Cactus store</a></p>
@@ -164,7 +175,7 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Precios-simples.png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia2/">Price template</a></p>
@@ -173,25 +184,27 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/COFFEE(1).jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/coffee/">Coffee shop</a></p>
+                        <p>With slider and a fixed background.</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Cambia-color.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h6 ml-3" target="_blank" href="https://colores-c0fhhho13.now.sh">demonstration of how you can give functionalities to the elements. in this case changing the colors.</a></p>
+                        <p><a class="text-center text-light h6 ml-3" target="_blank" href="https://dani4983.github.io/colores/">Example page that changes colors</a></p>
+                        <p>Demonstration of how elements can be modified by means of buttons</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Comidas-Argentinas.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/comidas-argentinas/">Web of typical foods and related events</a></p>
@@ -200,7 +213,7 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Fletes-Damián.png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/fletes-damian/">Freight company</a></p>
@@ -209,16 +222,17 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Guía-Hoteles.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/guia-de-hoteles/">Hotel guide</a></p>
+                        <p>With slider</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Instrumentos-Musicales.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/instrumentos-musicales/">Musical instruments shop</a></p>
@@ -227,7 +241,7 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Peluquería-Canina.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/peluqueria-canina/">Dog groomer</a></p>
@@ -236,7 +250,7 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Web-Site1.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/Web-site-1/">Website template</a></p>
@@ -245,10 +259,11 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="img">
+                <div class="img float-left">
                     <img src="./img/Weather-app.png" style="width: 150%; left:-25%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://weather-f4r9qt8s8.now.sh">Simple weather application</a></p>
+                        <p>You must put the name of your city and the code of your country.</p>
                     </div>
                 </div>
             </div>
