--- a/index.html
+++ b/index.html
@@ -4,37 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DaniDeveloper</title>
+    <title>Daniel Code</title>
 
     <!--    BOOTSTRAP    -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
+    <!--google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet"> 
 
     <!--Custom-->
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-        <div class="container">
-            <a class="navbar-brand" href="#"><img src="./img/logo.png" style="width:100%" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Login<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-        </div>
+        <div class="container justify-content-center">
+            <a class="navbar-brand" href="#"><img src="./img/logo.png" style="width:100%" alt="Dani Code"></a>
+        
         </div>
     </nav>
 
@@ -44,8 +29,8 @@
                 <div class="img float-left">
                     <img src="./img/Clothing.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/clothing/">Clothing store</a></p>
-                        <p>Using the pseudo-class :hover to display information about the product</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/clothing/">Clothing store</a></p>
+                        <p class="texto">Using the pseudo-class :hover to display information about the product</p>
                     </div>
                 </div>
             </div>
@@ -54,8 +39,8 @@
                 <div class="img float-left">
                     <img src="./img/SKATERS.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://bootstrap-theme2skate-qexfkr6f9.now.sh">Skateboard-inspired site</a></p>
-                        <p>Use of animations for the blocks to slide when the page is refreshed</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://bootstrap-theme2skate-qexfkr6f9.now.sh">Skateboard inspired site</a></p>
+                        <p class="texto">Use of animations for the blocks to slide when the page is refreshed</p>
 
                     </div>
                 </div>
@@ -65,7 +50,7 @@
                 <div class="img float-left">
                     <img src="./img/Website-profesional.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://website-profesional-57ah633nw.now.sh">Website template</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://website-profesional-57ah633nw.now.sh">Website template</a></p>
                     </div>
                 </div>
             </div>
@@ -74,8 +59,8 @@
                 <div class="img float-left">
                     <img src="./img/Pizzeria-Anabel.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/pizzeria-anabel/">Inspired by pizzeria</a></p>
-                        <p>With fixed funds</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/pizzeria-anabel/">Inspired by pizzeria</a></p>
+                        <p class="texto">With fixed funds</p>
                     </div>
                 </div>
             </div>
@@ -84,7 +69,7 @@
                 <div class="img float-left">
                     <img src="./img/copia1.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia1/">Copy of an internet template</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/copia1/">Copy of an internet template</a></p>
                     </div>
                 </div>
             </div>
@@ -93,8 +78,8 @@
                 <div class="img float-left">
                     <img src="./img/e-commerce.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/e-commerce/">Web-inspired for online stores</a></p>
-                        <p>An example guide to commercial stores with a 6-page pagination</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/e-commerce/">Web-inspired for online stores</a></p>
+                        <p class="texto">An example guide to commercial stores with a 6-page pagination</p>
                     </div>
                 </div>
             </div>
@@ -103,7 +88,7 @@
                 <div class="img float-left">
                     <img src="./img/Copia-pagina.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia3-stripe/">Inspired by stripe</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/copia3-stripe/">Inspired by stripe</a></p>
                     </div>
                 </div>
             </div>
@@ -112,8 +97,8 @@
                 <div class="img float-left">
                     <img src="./img/PetWeb.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/webpet/">For lovers of their moscotas</a></p>
-                        <p>With slider and a fixed bottom at the end of the page</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/webpet/">For lovers of their moscotas</a></p>
+                        <p class="texto">With slider and a fixed bottom at the end of the page</p>
                     </div>
                 </div>
             </div>
@@ -122,8 +107,8 @@
                 <div class="img float-left">
                     <img src="./img/Tienda-online(2).png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/tienda-con-bootstrap/">Web of online stores</a></p>
-                        <p>this page is 100% with Bootstrap4 without css</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/tienda-con-bootstrap/">Web of online stores</a></p>
+                        <p class="texto">this page is 100% with Bootstrap4 without css</p>
                     </div>
                 </div>
             </div>
@@ -132,7 +117,7 @@
                 <div class="img float-left">
                     <img src="./img/plantas.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/plantas/">Web dedicated to plants</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/plantas/">Web dedicated to plants</a></p>
                     </div>
                 </div>
             </div>
@@ -141,7 +126,7 @@
                 <div class="img float-left">
                     <img src="./img/Dentista.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/dentista/">Dentist website</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/dentista/">Dentist website</a></p>
                     </div>
                 </div>
             </div>
@@ -150,8 +135,8 @@
                 <div class="img float-left">
                     <img src="./img/Taller-mecánico.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/tallermecanico/">Mechanical workshop</a></p>
-                        <p>Here we have animations throughout the page even in the slider</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/tallermecanico/">Mechanical workshop</a></p>
+                        <p class="texto">Here we have animations throughout the page even in the slider</p>
                     </div>
                 </div>
             </div>
@@ -159,8 +144,8 @@
                 <div class="img float-left">
                     <img src="./img/Hamburguesas.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/humburguesas/">Burger shop</a></p>
-                        <p>Here we have a modal with a slider that shows four images with product promotions</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/humburguesas/">Burger shop</a></p>
+                        <p class="texto">Here we have a modal with a slider that shows four images with product promotions</p>
                     </div>
                 </div>
             </div>
@@ -169,16 +154,7 @@
                 <div class="img float-left">
                     <img src="./img/WEB-CACTUS.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/webcactus/">Cactus store</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-4">
-                <div class="img float-left">
-                    <img src="./img/Precios-simples.png" style="width: 100%" alt="">
-                    <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/copia2/">Price template</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/webcactus/">Cactus store</a></p>
                     </div>
                 </div>
             </div>
@@ -187,8 +163,8 @@
                 <div class="img float-left">
                     <img src="./img/COFFEE(1).jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/coffee/">Coffee shop</a></p>
-                        <p>With slider and a fixed background.</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/coffee/">Coffee shop</a></p>
+                        <p class="texto">With slider and a fixed background.</p>
                     </div>
                 </div>
             </div>
@@ -198,7 +174,7 @@
                     <img src="./img/Cambia-color.png" style="width: 100%" alt="">
                     <div class="opacidad">
                         <p><a class="text-center text-light h6 ml-3" target="_blank" href="https://dani4983.github.io/colores/">Example page that changes colors</a></p>
-                        <p>Demonstration of how elements can be modified by means of buttons</p>
+                        <p class="texto">Demonstration of how elements can be modified by means of buttons</p>
                     </div>
                 </div>
             </div>
@@ -207,7 +183,7 @@
                 <div class="img float-left">
                     <img src="./img/Comidas-Argentinas.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/comidas-argentinas/">Web of typical foods and related events</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/comidas-argentinas/">Web of typical foods and related events</a></p>
                     </div>
                 </div>
             </div>
@@ -216,7 +192,7 @@
                 <div class="img float-left">
                     <img src="./img/Fletes-Damián.png" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/fletes-damian/">Freight company</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/fletes-damian/">Freight company</a></p>
                     </div>
                 </div>
             </div>
@@ -225,8 +201,8 @@
                 <div class="img float-left">
                     <img src="./img/Guía-Hoteles.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/guia-de-hoteles/">Hotel guide</a></p>
-                        <p>With slider</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/guia-de-hoteles/">Hotel guide</a></p>
+                        <p class="texto">With slider</p>
                     </div>
                 </div>
             </div>
@@ -235,7 +211,7 @@
                 <div class="img float-left">
                     <img src="./img/Instrumentos-Musicales.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/instrumentos-musicales/">Musical instruments shop</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/instrumentos-musicales/">Musical instruments shop</a></p>
                     </div>
                 </div>
             </div>
@@ -244,7 +220,7 @@
                 <div class="img float-left">
                     <img src="./img/Peluquería-Canina.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/peluqueria-canina/">Dog groomer</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/peluqueria-canina/">Dog groomer</a></p>
                     </div>
                 </div>
             </div>
@@ -253,7 +229,7 @@
                 <div class="img float-left">
                     <img src="./img/Web-Site1.jpg" style="width: 100%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://dani4983.github.io/Web-site-1/">Website template</a></p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://dani4983.github.io/Web-site-1/">Website template</a></p>
                     </div>
                 </div>
             </div>
@@ -262,8 +238,8 @@
                 <div class="img float-left">
                     <img src="./img/Weather-app.png" style="width: 150%; left:-25%" alt="">
                     <div class="opacidad">
-                        <p><a class="text-center text-light h3 ml-3" target="_blank" href="https://weather-f4r9qt8s8.now.sh">Simple weather application</a></p>
-                        <p>You must put the name of your city and the code of your country.</p>
+                        <p><a class="text-center text-light h5 ml-3" target="_blank" href="https://weather-f4r9qt8s8.now.sh">Simple weather application</a></p>
+                        <p class="texto">You must put the name of your city and the code of your country.</p>
                     </div>
                 </div>
             </div>
